# qe6502

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  perfect6502_debugger_cycle_terminology.md  todo.txt
binds/: CMakeLists.txt
binds/cpp/: CMakeLists.txt
binds/cpp/include/qe6502/: cpu.hpp
binds/cpp/src/: cpu.cpp
binds/js/: CMakeLists.txt  README.md  package.json.in  qe6502.js  qe6502_js.c
binds/python/: CMakeLists.txt  README.md  _qe6502.c  package_wheel.py  pyproject.toml.in
binds/rust/: CMakeLists.txt  Cargo.toml  build.rs  package_crate.py
binds/rust/native/src/: qe6502.c
binds/rust/src/: lib.rs  sys.rs
cpu/: CMakeLists.txt
cpu/include/qe6502/: qe6502.h  qe6502_abi.h  qe6502_macros.h  qe6502_version.h
cpu/src/: qe6502.c  qe6502_abi.c  qe6502_cmos.c  qe6502_cmos_fw.h  qe6502_cmos_opcodes.h  qe6502_cross_build.h  qe6502_defs.h  qe6502_format.c  qe6502_format.h  qe6502_inline.h  qe6502_log.c  qe6502_log.h  qe6502_nmos.c  qe6502_nmos_fw.h  qe6502_nmos_opcodes.h  qe6502_opcode_meta.c
cpu/src/control_store/: nes_block.inc  nmos_block.inc  qe6502_nes_block.h  qe6502_nmos_block.h  qe6502_rw_block.h  qe6502_st_block.h  qe6502_wdc_block.h  rw_block.inc  st_block.inc  wdc_block.inc
cpu_v2/: CMakeLists.txt
cpu_v2/code_gen/: canonical_generate_qe6502_v2_stub.py  canonical_nmos6502_class_codegen.json  canonical_qe6502_v2_generated_stub_report.json  generate_qe6502_v2_stub.py  nmos6502_class_codegen.json  nmos6502_json_documentation.md  nmos6502_opcodes_meta.json  qe6502_v2_generated_stub.c-gen
cpu_v2/include/qe6502/: qe6502.h  qe6502_abi.h
cpu_v2/src/: qe6502.c  qe6502.h  qe6502_defs.h  qe6502_v2.c
cpu_v2/src/control_store/: nes.inc  nes_block.inc  nmos.inc  nmos_block.inc  rw_block.inc  st_block.inc  wdc_block.inc
examples/AppleII/: AppleII.cpp  CMakeLists.txt  Computer.cpp  Computer.h  Context.h  ControlPanel.cpp  ControlPanel.h  Display.cpp  Display.h  Keyboard.cpp  Keyboard.h  Speaker.cpp  Speaker.h
examples/AppleII/roms/: Roms.cpp  Roms.h
examples/Libs/App/: App.cpp  App.h  CMakeLists.txt  ImGuiWindow.cpp  ImGuiWindow.h
examples/Libs/Audio/: Audio.cpp  Audio.h  CMakeLists.txt
examples/Libs/Utils/: CMakeLists.txt  Clock.cpp  Clock.h  CountdownTimer.cpp  CountdownTimer.h  Defensive.h  Dsk2Nib.cpp  Dsk2Nib.h  Fs.cpp  Fs.h  Json.cpp  Json.h  Memory.h  Platform.cpp  Platform.h  SpinLock.h  Stopwatch.cpp  Stopwatch.h
examples/c_examples/speed_benchmark/: CMakeLists.txt  speed_benchmark.c
examples/c_examples/speed_benchmark_v2/: CMakeLists.txt  speed_benchmark_v2.c
harness/: CMakeLists.txt
harness/abi/: CMakeLists.txt  snapshot.c  surface.c
harness/cpp_smoke/: CMakeLists.txt  main.cpp
harness/cs_klaus2m5/: CMakeLists.txt  Qe6502.CsKlaus2m5.csproj
harness/cs_smoke/: CMakeLists.txt
harness/install_consume/: CMakeLists.txt  run_install_consume.cmake
harness/install_consume/consumer_cpp/: CMakeLists.txt  main.cpp
harness/interrupts/: combined_tests.c  nmos_quirk_tests.c
harness/java_klaus2m5/: CMakeLists.txt
harness/java_smoke/: CMakeLists.txt
harness/js_klaus2m5/: CMakeLists.txt  js_klaus2m5.mjs  js_save_load_functional.mjs  js_save_load_klaus2m5.mjs
harness/js_manual/: CMakeLists.txt  index.html  js_manual.js  js_singlestep.js
harness/js_package_smoke/: CMakeLists.txt  run_npm_package_smoke.cmake  run_npm_publish_dry_run.cmake
harness/js_smoke/: CMakeLists.txt  js_smoke.mjs
harness/klaus2m5/: CMakeLists.txt  klaus2m5.c  main.c  save_load.cpp  test_roms.c
harness/klaus2m5_v2/: CMakeLists.txt  klaus2m5_v2.c  main.c  test_roms.c
harness/netlist_lockstep/: CMakeLists.txt  main.cpp
harness/py_klaus2m5/: CMakeLists.txt  py_klaus2m5.py
harness/py_smoke/: CMakeLists.txt
harness/rust_klaus2m5/: CMakeLists.txt
harness/rust_klaus2m5/src/: main.rs
harness/rust_smoke/: CMakeLists.txt
harness/rust_smoke/src/: main.rs
harness/singlestep/: CMakeLists.txt  main.cpp
harness/singlestep_v2/: CMakeLists.txt  main.cpp
harness/transistor_netlist_test/: CMakeLists.txt  main.c  opcode_test.c
harness/transistor_netlist_test/debugger/: CMakeLists.txt  bootstrap.cpp  bootstrap.hpp  command_input.cpp  command_input.hpp  command_loop.cpp  command_loop.hpp  cycle_cursor.cpp  cycle_cursor.hpp  debugger_core.cpp  debugger_core.hpp  help_text.cpp  help_text.cpp.orig  help_text.hpp  illegal_opcode_investigator.cpp  main.cpp  microcode_opcode_slot_map.tsv  perfect_bridge.cpp  perfect_bridge.hpp  processor_kind.cpp  processor_kind.hpp  qe_bridge.cpp  qe_bridge.hpp  setup_input.cpp  setup_input.hpp  singlestep_opcode_cycle_counts.csv  temporary_tests.cpp  temporary_tests.hpp  ui_ai.cpp  ui_ai.hpp  ui_human.cpp  ui_human.hpp
harness/transistor_netlist_test/debugger/reports/: qe6502_illegal_group1_report.md  (+8 more)
harness/transistor_netlist_test/trace/: CMakeLists.txt  main.cpp  perfect_trace_backend.cpp  perfect_trace_backend.hpp  qe_trace_backend.cpp  qe_trace_backend.hpp  trace_format.cpp  trace_format.hpp  trace_help.cpp  trace_help.hpp  trace_script.cpp  trace_script.hpp
qe/: CMakeLists.txt
qe/include/qe/: abi_utils.h  api_private.h  api_private_impl.h  api_public.h  api_public_impl.h  impl_utils.h  log.h
qe/src/: impl_utils.c  log.c
qe_6502/: CMakeLists.txt
qe_6502/include/: qe6502.h  qe6502_macros.h  qe_6502.h  qe_6502_ffi.h  qe_utils.h
qe_6502/src/: 6502.c  6502_inline.h  cmos.c  cmos_fw.h  cmos_opcodes.h  nmos.c  nmos_fw.h  nmos_opcodes.h  qe6502.c  qe6502_cmos.c  qe6502_cmos_fw.h  qe6502_cmos_opcodes.h  qe6502_cross_build.h  qe6502_defs.h  qe6502_nmos_fw.h  utils.c
qe_appleII/: CMakeLists.txt
qe_appleII/include/: qe_appleII.h  qe_appleIIhelpers.h
qe_appleII/src/: appleII.c  appleIIhelpers.c
tests/interrupts/: CMakeLists.txt  interrupt_test_util.c  interrupt_tests.h  irq_tests.c  main.c  nmi_tests.c  nmos_quirk_tests.c
tests/klaus2m5/: 6502_functional_test.hex  65C02_extended_opcodes_test.hex  CMakeLists.txt  klaus2m5.c  main.c  test_roms.c
tests/singlestep_v2/: CMakeLists.txt
tools/asm6502/: CMakeLists.txt
tools/asm6502/src/: asm6502.cpp
tools/asm6502/tests/: smoke.cpp
(+99 files in other folders)
