if(QE6502_BUILD_WASM)
    add_subdirectory(js_smoke)
    add_subdirectory(js_klaus2m5)
    add_subdirectory(js_manual)
else()
    add_subdirectory(third_party/perfect6502)
    add_subdirectory(abi)
    add_subdirectory(cpp_smoke)
    add_subdirectory(klaus2m5)
    add_subdirectory(singlestep)
    add_subdirectory(netlist_lockstep)
endif()
