if(QE6502_BUILD_WASM)
    add_subdirectory(js_smoke)
    add_subdirectory(js_klaus2m5)
    add_subdirectory(js_manual)
else()
    if(NOT TARGET perfect6502)
        add_subdirectory(third_party/perfect6502)
    endif()
    add_subdirectory(abi)
    add_subdirectory(cpp_smoke)
    add_subdirectory(klaus2m5)
    add_subdirectory(singlestep)
    add_subdirectory(netlist_lockstep)
    add_subdirectory(cpu6502_lockstep)
endif()
